# XMPPbot

./: .coveragerc  .drone.yml  .gitignore  README.md  config_sample.json  envsbot.py  init_chat_slang.csv  pyproject.toml  requirements-dev.txt  vcard_sample.py
database/: manager.py  rooms.py  users.py
plugins/: _admin.py  _core.py  _reg_profile.py  birthday_notify.py  dice.py  ducks.py  help.py  info.py  information.py  karma.py  pin.py  plugins.py  poll.py  presence.py  reminder.py  rooms.py  rss.py  sed.py  tell.py  tools.py  urlcheck.py  users.py  vcard.py  weather.py  xkcd.py  xmpp.py
tests/: README.md  conftest.py  helpers.py
tests/bot/: test_envsbot.py
tests/database/: test_database_manager.py  test_manager.py  test_rooms.py  test_users.py
tests/plugins/: test__admin.py  test__core.py  test__reg_profile.py  test__warnings.py  test_birthday_notify.py  test_dice.py  test_ducks.py  test_help.py  test_info.py  test_karma.py  test_pin.py  test_plugins.py  test_poll.py  test_presence.py  test_reminder.py  test_rooms.py  test_rss.py  test_sed.py  test_tell.py  test_tools.py  test_urlcheck.py  test_users.py  test_vcard.py  test_weather.py  test_xkcd.py  test_xmpp.py
tests/utils/: test_command.py  test_config.py  test_plugin_manager.py  test_presence_manager.py  test_rate_limiter.py
utils/: command.py  config.py  plugin_manager.py  presence_manager.py  rate_limiter.py
