[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "envsbot"
version = "1.2.2"
description = "A modular plugin-driven XMPP bot framework"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "~dan", email = "dan@envs.net" },
    { name = "~creme", email = "creme@envs.net" },
]

license = { text = "GPL-3.0-only" }

dependencies = [
    "slixmpp>=1.8,<2",
    "aiosqlite>=0.20,<1"
]

keywords = [
    "xmpp",
    "chatbot",
    "bot",
    "xmpp-bot",
    "plugins",
    "automation"
]

classifiers = [
    "Development Status :: 5 - Stable",
    "Intended Audience :: Developers, XMPP operators",
    "Topic :: Communications :: Chat",
    "License :: OSI Approved :: GPL-3.0-only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = ["plugins", "database", "utils"]

[tool.setuptools.package-dir]
"" = "."


[tool.pytest.ini_options]
# asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [ "-v", "--cov=.", "--cov-report=term" ]
filterwarnings = [
  "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning"
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "venv/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
